# DSTT-v2

./: LICENSE  README.md  generate.py  prepare_data.py  pyproject.toml  requirements.txt  setup.py  train.py
dstt/: __init__.py  attention.py  config.py  data.py  embedding.py  evolution.py  flow_matrices.py  gating.py  generate.py  losses.py  model.py  partitioning.py  routing.py  tokenizer.py  train_config.py  trainer.py  utils.py
examples/: custom_config.py  language_model.py  quickstart.py  train_shakespeare.py
scripts/: benchmark.py
tests/: test_attention.py  test_flow_matrices.py  test_model.py  test_partitioning.py  test_routing.py  test_training.py
